# 99Haskell

./: README.md  ninety_nine_haskell.cabal
hspec_sample/: Spec.hs
src/main/: Arithmetic.hs  BinaryTrees.hs  Lists.hs  LogicAndCodes.hs
src/test/: ArithmeticSpec.hs  BinaryTreesSpec.hs  ListsSpec.hs  LogicAndCodesSpec.hs
