name: 99Haskell
version: 0.0.0
license: MIT
license-file: LICENSE
copyright: (c) 2015 Y.Tsutsui
author: Y.Tsutsui <yosuke.tsutsui@gmail.com>
maintainer: Y.Tsutsui <yosuke.tsutsui@gmail.com>
build-type: Simple
cabal-version: >= 1.8

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src/main
  exposed-modules:
      Lists
  build-depends:
      base    == 4.*
    , random

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      src/test
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , 99Haskell
    , hspec   == 2.*
